ci: use new commands

--- a/.github/workflows/rustlings-check.yml
+++ b/.github/workflows/rustlings-check.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           cd .github/
           result=$(make ci_rustlings_check)
-          echo "##[set-output name=result;]$(result)"
+          echo "result={result}" >> $GITHUB_OUTPUT
       - name: Generate custom badge
         uses: RubbaBoy/BYOB@v1.3.0
         with:
