ci: add missing id

--- a/.github/workflows/rustlings-check.yml
+++ b/.github/workflows/rustlings-check.yml
@@ -19,7 +19,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Run test script
+      - id: test
+        name: Run test script
         run: |
           cd .github/
           result=$(make ci_rustlings_check)
