--- a/.github/workflows/rustlings-check.yml
+++ b/.github/workflows/rustlings-check.yml
@@ -24,8 +24,7 @@ jobs:
         run: |
           cd .github/
           result=$(make ci_rustlings_check)
-          echo "result=$result"
-          echo "result=$result" >> "$GITHUB_OUTPUT"
+          echo "result=$result" | tee "$GITHUB_OUTPUT"
       - name: Generate custom badge
         uses: RubbaBoy/BYOB@v1.3.0
         with:
